# docketbird-mcp

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  case_types.json  courts.json  db_agent.py  docketbird_api.yaml  docketbird_mcp.py  pyproject.toml  requirements.txt  test_deployment.py
.github/workflows/: deploy.yml
agents/: db_agent_prototype.py  docketbird_agent.py
tests/: test_deployment.py
